<resources>
    <string name="app_name">Weather App</string>
    <string name="search">Search</string>
    <string name="dallas_texas">Dallas Texas</string>
    <string name="trash_icon">Trash icon</string>
    <string name="weather_icon">weather icon</string>
    <string name="temperature">72°</string>
    <string name="day">Day</string>
    <string name="_12pm">12pm</string>
    <string name="_72">72</string>
    <string name="_10">10%</string>
    <string name="_2_2">2.2</string>
    <string name="_60">60%</string>
    <string name="day_high">%1$°</string>
    <string name="search_cities">Search Cities</string>
    <string name="radar">radar</string>
</resources>