<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:contentDescription="@string/weather_icon"
        android:src="@drawable/ic_icon_weather_active_ic_sunny_active"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/_12pm"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/temp"
        app:layout_constraintStart_toEndOf="@+id/weather_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/_72"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/chance"
        app:layout_constraintStart_toEndOf="@id/time"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/_10"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/wind"
        app:layout_constraintStart_toEndOf="@id/temp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/_2_2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/humidity"
        app:layout_constraintStart_toEndOf="@id/chance"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/_60"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/wind"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>